feat: change method form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h3>Tahun 2020</h3>
         </br>
         <div id="form">
-            <form action="#" onsubmit="return validateForm()" method="post" name="myForm">
+            <form action="#" onsubmit="return validateForm()" method="get" name="myForm">
                 <table id="table">
                     <tr>
                         <td>NAMA: </td>
